[package]
name = "rust-crud-api-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
dotenv = "0.15.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres"] }
